<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2017 Yan Zhenjie.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">TaoAlbum</string>

    <string name="btn_upload">UPLOAD SELECTED</string>
    <string name="btn_uploadAll">UP ALL</string>
    <string name="btn_txt_save_ip">SAVE CONFIG</string>
    <string name="main_tips_ip">IP:</string>
    <string name="main_tips_port">:</string>
    <string name="btn_server_album_list">SERVER ALBUM</string>



    <string name="btn_function_camera">Camera</string>
    <string name="btn_function_album">Photos</string>
    <string name="btn_function_picture">Only Pictures</string>
    <string name="btn_function_video">Only Videos</string>
    <string name="btn_function_gallery">Gallery</string>
    <string name="btn_function_change_style">Change Style</string>
    <string name="btn_function_filter">Filter</string>

    <string name="btn_plus">+</string>

    <string name="title_camera">Camera</string>
    <string name="menu_camera_image">Image</string>
    <string name="menu_camera_video">Video</string>

    <string name="title_image_select">Select image</string>
    <string name="menu_image_select">Image</string>

    <string name="title_video_select">Select video</string>
    <string name="menu_video_select">Video</string>

    <string name="title_album_select">Media Album</string>
    <string name="menu_album_select">Album</string>

    <string name="title_gallery">Gallery</string>

    <string name="menu_preview">Gallery</string>
    <string name="btn_gallery_preview">Preview Network Image</string>

    <string name="checkable">Checkable Options</string>
    <string name="canceled">Canceled</string>
    <string name="no_selected">Please select, first.</string>

    <string name="hint_image_preview_click">Click on a item to preview them.</string>

    <string name="hint_filter_after_visibility">Did you show the filtered files?</string>
    <string name="filter_after_visibility_visible">Show</string>
    <string name="filter_after_visibility_gone">Hide</string>

    <string name="activity_upload_title">Upload Album</string>
    <string name="album_list_date">Date:</string>
</resources>