<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2017 Yan Zhenjie.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Album.MatchParent">

    <include layout="@layout/toolbar_scroll" />

    <android.support.v4.widget.NestedScrollView
        style="@style/Album.MatchParent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/Album.WrapContent.WidthMatchParent"
            android:orientation="vertical">
            <LinearLayout
                style="@style/Album.WrapContent.WidthMatchParent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/main_tips_ip"/>
                <EditText
                    android:id="@+id/txt_address"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:maxLength="15"/>
                <TextView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/main_tips_port"/>
                <EditText
                    android:id="@+id/txt_port"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="5"/>
            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save_ip"
                style="@style/Album.Button.Main"
                android:text="@string/btn_txt_save_ip" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_album"
                style="@style/Album.Button.Main"
                android:text="@string/btn_function_album" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/main_btn_upload"
                style="@style/Album.Button.Main"
                android:text="@string/btn_uploadAll" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/main_btn_server_album_list"
                style="@style/Album.Button.Main"
                android:text="@string/btn_server_album_list" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>